typescript/checker/tests/conformance/es6/Symbols/symbolProperty49.ts.stderr
error: TS2585 {
    span: Span {
        lo: BytePos(
            78,
        ),
        hi: BytePos(
            84,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolProperty49.ts:6:10
  |
6 |         [Symbol.iterator]() { }
  |          ^^^^^^

